--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
         theme: {
           extend: {
             colors: {
-              'bond-primary': '#1e3a8a', // Deep blue
-              'bond-secondary': '#64748b', // Slate
-              'bond-accent': '#ef4444', // Red for yield up (in this context)
-              'bond-success': '#10b981', // Green
+              'bond-primary': '#1e3a8a',
+              'bond-secondary': '#64748b',
+              'bond-accent': '#ef4444',
+              'bond-success': '#10b981',
               'paper': '#f8fafc',
             },
             fontFamily: {
@@ -27,13 +27,12 @@
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@300;400;500;700&display=swap" rel="stylesheet">
     <style>
         body { font-family: 'Noto Sans TC', sans-serif; }
-        /* Custom scrollbar for report area */
         .report-content::-webkit-scrollbar { width: 8px; }
         .report-content::-webkit-scrollbar-track { background: #f1f1f1; }
         .report-content::-webkit-scrollbar-thumb { background: #cbd5e1; border-radius: 4px; }
         .report-content::-webkit-scrollbar-thumb:hover { background: #94a3b8; }
     </style>
-  <script type="importmap">
+    <script type="importmap">
 {
   "imports": {
     "react": "https://esm.sh/react@19.0.0",
@@ -47,9 +46,10 @@
   }
 }
 </script>
-<script type="module" src="index.tsx"></script>
-</head>
+  </head>
   <body class="bg-gray-100 text-gray-800 antialiased">
     <div id="root"></div>
+    <!-- 將腳本移至此處確保 root 元素已存在 -->
+    <script type="module" src="./index.tsx"></script>
   </body>
 </html>
