--- a/index.html
+++ b/index.html
@@ -36,20 +36,20 @@
 {
   "imports": {
     "react": "https://esm.sh/react@19.0.0",
-    "react/": "https://esm.sh/react@19.0.0/",
     "react-dom": "https://esm.sh/react-dom@19.0.0",
     "react-dom/client": "https://esm.sh/react-dom@19.0.0/client",
     "@google/genai": "https://esm.sh/@google/genai@1.3.0",
-    "react-markdown": "https://esm.sh/react-markdown@9.0.1",
+    "react-markdown": "https://esm.sh/react-markdown@9.0.1?deps=react@19.0.0",
     "remark-gfm": "https://esm.sh/remark-gfm@4.0.0",
-    "react-dom/": "https://esm.sh/react-dom@^19.2.3/"
+    "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
+    "react/": "https://esm.sh/react@^19.2.3/"
   }
 }
 </script>
   </head>
   <body class="bg-gray-100 text-gray-800 antialiased">
     <div id="root"></div>
-    <!-- 將腳本移至此處確保 root 元素已存在 -->
+    <!-- 確保腳本正確載入 index.tsx -->
     <script type="module" src="./index.tsx"></script>
   </body>
 </html>
