--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
     "@google/genai": "https://esm.sh/@google/genai@1.3.0",
     "react-markdown": "https://esm.sh/react-markdown@9.0.1?deps=react@19.0.0",
     "remark-gfm": "https://esm.sh/remark-gfm@4.0.0",
-    "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
-    "react/": "https://esm.sh/react@^19.2.3/"
+    "react/": "https://esm.sh/react@19.0.0/",
+    "react-dom/": "https://esm.sh/react-dom@19.0.0/"
   }
 }
 </script>
